--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </li>
 
         <li>
-          <a href="#" target="_blank">Veja meu portifólio</a>
+          <a href="https://github.com/lukspk1" target="_blank">Veja meu portifólio</a>
         </li>
 
         <li>
@@ -78,7 +78,7 @@
         </a>
 
         <a
-          href="https://www.tiktok.com/@eulukasarthur?_t=ZM-8vENP61b7CP&_r=1"
+          href="https://github.com/lukspk1"
           target="_blank"
         >
           <ion-icon name="logo-github"></ion-icon>
