att erro  footer

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
 
       <footer>
-        Fito por
+        Feito por
         <a
           href="https://www.instagram.com/eulukasarthur?igsh=ZzB3Y3BoaG9wdzBu"
           target="_blank"
